Implementação do mecanismo de Autenticação e Autorização

--- a/flashcard/templates/flashcard/criar_flashcard.html
+++ b/flashcard/templates/flashcard/criar_flashcard.html
@@ -2,4 +2,11 @@
 
 {% block content %}
 	<h1>Criar flashcard</h1>
+    <form class="form-flashcard" method="post">
+        {% csrf_token %}
+
+        {{ form }}
+
+        <button type="submit">Criar flashcard</button>
+    </form>
 {% endblock %}
