--- a/flashcard/templates/flashcard/home.html
+++ b/flashcard/templates/flashcard/home.html
@@ -3,9 +3,16 @@
 {% block content %}
 	<h1>Home</h1>
     <ul>
-        <li><a href="{% url 'flashcard:escolher_grupo_flashcard' %}">Criar flashcard</a></li>
+        <li><a href="{% url 'flashcard:criar_flashcard' %}">Criar flashcard</a></li>
         <li><a href="{% url 'flashcard:visualizar_grupos' %}">Grupos flashcard</a></li>
         <li><a href="{% url 'flashcard:escolher_grupo_flashcard' %}">Revisão dos Flashcards</a></li>
-        <li><a href="{% url 'flashcard:login' %}">Login</a></li>
+        {% if user.is_authenticated %}
+            <form action="{% url 'flashcard:logout' %}" method="post">
+                {% csrf_token %}
+                <button type="submit">Logout</button>
+            </form>
+        {% else %}
+            <li><a href="{% url 'flashcard:login' %}">Login</a></li>
+        {% endif %}
     </ul>
 {% endblock %}
