--- a/flashcard/templates/flashcard/usuarios/login.html
+++ b/flashcard/templates/flashcard/usuarios/login.html
@@ -2,5 +2,13 @@
 
 {% block content %}
 	<h1>Login</h1>
+    <form method="post">
+        {% csrf_token %}
+
+        {{ form }}
+
+        <button type="submit">Fazer Login</button>
+    </form>
+
     <h2><a href="{% url 'flashcard:cadastro' %}">Cadastro</a></h2>
 {% endblock %}
