--- a/flashcard/templates/flashcard/home.html
+++ b/flashcard/templates/flashcard/home.html
@@ -3,9 +3,9 @@
 {% block content %}
 	<h1>Home</h1>
     <ul>
-        <li><a href="{% url 'flashcard:criar_flashcard' %}">Criar flashcard</a></li>
+        <li><a href="{% url 'flashcard:escolher_grupo_flashcard' 'criacao' %}">Criar flashcard</a></li>
         <li><a href="{% url 'flashcard:visualizar_grupos' %}">Grupos flashcard</a></li>
-        <li><a href="{% url 'flashcard:escolher_grupo_flashcard' %}">Revisão dos Flashcards</a></li>
+        <li><a href="{% url 'flashcard:escolher_grupo_flashcard' 'revisão' %}">Revisão dos Flashcards</a></li>
         {% if user.is_authenticated %}
             <form action="{% url 'flashcard:logout' %}" method="post">
                 {% csrf_token %}
