--- a/flashcard/templates/flashcard/criar_flashcard.html
+++ b/flashcard/templates/flashcard/criar_flashcard.html
@@ -1,7 +1,7 @@
 {% extends 'global/base.html' %}
 
 {% block content %}
-	<h1>Criar flashcard</h1>
+	<h1>Criar flashcard {{ tipo_flashcard }}</h1>
     <form class="form-flashcard" method="post">
         {% csrf_token %}
 
