--- a/flashcard/templates/flashcard/grupos_flashcard/editar_grupo.html
+++ b/flashcard/templates/flashcard/grupos_flashcard/editar_grupo.html
@@ -2,4 +2,10 @@
 
 {% block content %}
 	<h1>Editar grupo flashcard</h1>
+
+    <form>
+        {% csrf_token %}
+        {{ form }}
+        <button type="submit">Atualizar grupo</button>
+    </form>
 {% endblock %}
